Fixed bug with category field overflow in make record window.

--- a/Main/main.css
+++ b/Main/main.css
@@ -43,9 +43,6 @@ body.font2 input {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 700;
 }
-/* body.font2 :is(h1, h2, h3, h4, h5, h6) {
-	font-weight: lighter;
-} */
 
 .body-preload {
   height: 100vh;
@@ -1829,6 +1826,7 @@ body.font2 .make-record-note {
 
 
 .category-cont > div {
+	max-width: 96%;
     padding-inline: 3px 10px;
 	border-radius: 15px;
 	display: flex;
